# ISE547

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2f79b9e1b0b6_init_with_user_and_threads.py
backend/app/: infermedica_schemas.py  main.py  schemas.py
backend/app/api/: main.py
backend/app/api/routes/: ai_chat.py  auth.py  hello.py
backend/app/core/: config.py  db.py
backend/app/core/langgraph/: graph.py  prompts.py
backend/app/core/prompts/: P1_Direct.txt  P2_Structured.txt  P3_Conservative.txt  P4_CategoryFirst.txt
backend/app/models/: __init__.py  base.py  session.py  thread.py  user.py
backend/app/service/: auth_service.py  chat_service.py  diagnosis_kb_service.py
backend/scripts/: eval_agent.ipynb  eval_agent.py  export_openapi.py  extract_sample.py  extract_unique_diagnosis.py
backend/scripts/data/: eval_agent_p2_top120_results.csv  eval_agent_p3_top120_results.csv  eval_agent_p4_top120_results.csv  eval_agent_top100_results.csv  eval_agent_top10_results.csv  eval_agent_top120_results.csv  eval_agent_top1_results.csv  eval_agent_top2_results.csv  updated_result_with_BERT_eval_120.csv  updated_result_with_BERT_eval_120_cleaned_cleaned.csv  updated_result_with_BERT_sample_100.csv
frontend/: .gitignore  README.md  index.html  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/client/: sdk.gen.ts  types.gen.ts
ops/: backend.conf  deploy.sh  ise547-backend.conf
(+13 files in other folders)
